Little restructuring, moved layer to core and base application to editor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,19 +49,20 @@ include_directories(
     "Dependencies/MSDF/msdfgen/core/"
     "Dependencies/MSDF/msdfgen/ext/"
     "Dependencies/MSDF/msdf-atlas-gen/"
-    "Core/Application/"
+
     "Core/Common/"
     "Core/Engine/"
     "Core/Event/"
     "Core/FontMgr/"
     "Core/Input/"
     "Core/Materials/"
+    "Core/Primitives/"
     "Core/Physics/"
-    "Core/Project/"
     "Core/Rendering/"
     "Core/Resources/"
     "Core/SceneMgr/"
     "Core/Scripting/"
+    "Core/Text/"
     "Core/Viewing/"
     "Editor/"
     "Editor/Utility/"
@@ -103,57 +104,116 @@ set(SHARED_SOURCES
     ${MSDF_XT_INC} ${MSDF_XT_SRC}
     ${MSDG_ATGN_INC} ${MSDG_ATGN_SRC}
 
-    "Core/Common/Common.h" "Core/Common/Common.cpp"
-    "Core/Engine/TimeStep.h" "Core/Engine/TimeStep.cpp"
-    "Core/Engine/BaseWin32Window.h" "Core/Engine/BaseWin32Window.cpp"
-    "Core/Engine/Win32Window.h" "Core/Engine/Win32Window.cpp"
-    "Core/Event/Event.h" "Core/Event/Event.cpp"
-    "Core/FontMgr/FontMgr.h" "Core/FontMgr/FontMgr.cpp"
-    "Core/Text/TextField.h" "Core/Text/TextField.cpp"
-    "Core/Text/Label.h" "Core/Text/Label.cpp"
-    "Core/Input/InputDevice.h" "Core/Input/InputDevice.cpp"
-    "Core/Input/Keyboard.h" "Core/Input/Keyboard.cpp"
-    "Core/Input/Mouse.h" "Core/Input/Mouse.cpp"
-    "Core/Rendering/LightAndShadow/PointLight.h" "Core/Rendering/LightAndShadow/PointLight.cpp"
-    "Core/Materials/TextureBase.h" "Core/Materials/TextureBase.cpp"
-    "Core/Materials/Material.h" "Core/Materials/Material.cpp"
-    "Core/Materials/Shader.h" "Core/Materials/Shader.cpp"
-    "Core/Materials/Texture.h" "Core/Materials/Texture.cpp"
-    "Core/Physics/Collider.h" "Core/Physics/Collider.cpp"
-    "Core/Physics/Ray.h" "Core/Physics/Ray.cpp"
-    "Core/Physics/PhysicsState.h" "Core/Physics/PhysicsState.cpp"
-    "Core/Project/Project.h" "Core/Project/Project.cpp"
-    "Core/Rendering/Renderer.h" "Core/Rendering/Renderer.cpp"
-    "Core/Rendering/VertexArray.h" "Core/Rendering/VertexArray.cpp"
-    "Core/SceneMgr/Scene.h" "Core/SceneMgr/Scene.cpp"
-    "Core/Scripting/ScriptBase.h" "Core/Scripting/ScriptBase.cpp"
-    "Core/Scripting/ScriptMgr.h" "Core/Scripting/ScriptMgr.cpp"
-    "Core/Scripting/Script.h" "Core/Scripting/Script.cpp"
-    "Editor/Utility/ObjectLoader.h" "Editor/Utility/ObjectLoader.cpp"
-    "Editor/Utility/Serializer.h" "Editor/Utility/Serializer.cpp"
-    "Core/Viewing/Camera.h" "Core/Viewing/Camera.cpp"
-    "Core/Application/Grid.h" "Core/Application/Grid.cpp"
-    "Core/Engine/Mesh.h" "Core/Engine/Mesh.cpp"
-    "Core/Application/Square.h" "Core/Application/Square.cpp"
-    "Core/Rendering/FrameBuffer.h" "Core/Rendering/FrameBuffer.cpp"
-    "Core/Rendering/BufferLayout.h" "Core/Rendering/BufferLayout.cpp" 
-    "Core/Resources/ShaderResource.h" "Core/Resources/ShaderResource.cpp" 
-    "Core/Engine/BoundingVolume.h" "Core/Engine/BoundingVolume.cpp"
-    "Core/Engine/BVH.h" "Core/Engine/BVH.cpp"
-    "Core/Resources/AssetManager.h" "Core/Resources/AssetManager.cpp"
- "Core/Engine/UUID.h" "Core/Engine/UUID.cpp" "Core/Rendering/VertexBuffer.h" "Core/Rendering/VertexBuffer.cpp" "Core/Rendering/UniformBuffer.h" "Core/Rendering/RenderCommand.h" "Core/Rendering/RenderCommand.cpp")
+    "Core/Common/Common.h"
+    "Core/Common/Common.cpp"
+
+    "Core/Engine/TimeStep.h"
+    "Core/Engine/TimeStep.cpp"
+    "Core/Engine/BaseWin32Window.h"
+    "Core/Engine/BaseWin32Window.cpp"
+    "Core/Engine/BoundingVolume.h"
+    "Core/Engine/BoundingVolume.cpp"
+    "Core/Engine/BVH.h"
+    "Core/Engine/BVH.cpp"
+    "Core/Engine/Layer.h"
+    "Core/Engine/Layer.cpp"
+    "Core/Engine/UUID.h" 
+    "Core/Engine/UUID.cpp"
+    "Core/Engine/Win32Window.h"
+    "Core/Engine/Win32Window.cpp"
+
+    "Core/Event/Event.h"
+    "Core/Event/Event.cpp"
+
+    "Core/FontMgr/FontMgr.h"
+    "Core/FontMgr/FontMgr.cpp"
+
+    "Core/Input/InputDevice.h"
+    "Core/Input/InputDevice.cpp"
+    "Core/Input/Keyboard.h"
+    "Core/Input/Keyboard.cpp"
+    "Core/Input/Mouse.h"
+    "Core/Input/Mouse.cpp"
+
+    "Core/Materials/TextureBase.h"
+    "Core/Materials/TextureBase.cpp"
+    "Core/Materials/Material.h"
+    "Core/Materials/Material.cpp"
+    "Core/Materials/Shader.h"
+    "Core/Materials/Shader.cpp"
+    "Core/Materials/Texture.h"
+    "Core/Materials/Texture.cpp"
+
+    "Core/Physics/Collider.h"
+    "Core/Physics/Collider.cpp"
+    "Core/Physics/Ray.h"
+    "Core/Physics/Ray.cpp"
+    "Core/Physics/PhysicsState.h"
+    "Core/Physics/PhysicsState.cpp"
+
+    "Editor/Utility/ObjectLoader.h"
+    "Editor/Utility/ObjectLoader.cpp"
+    "Editor/Utility/Serializer.h"       
+    "Editor/Utility/Serializer.cpp"
+
+    "Core/Primitives/Mesh.h"
+    "Core/Primitives/Mesh.cpp"
+    "Core/Primitives/Grid.h"
+    "Core/Primitives/Grid.cpp"
+    "Core/Primitives/Square.h"
+    "Core/Primitives/Square.cpp"
+
+    "Core/Rendering/FrameBuffer.h"
+    "Core/Rendering/FrameBuffer.cpp"
+    "Core/Rendering/BufferLayout.h" 
+    "Core/Rendering/BufferLayout.cpp"
+    "Core/Rendering/LightAndShadow/PointLight.h"
+    "Core/Rendering/LightAndShadow/PointLight.cpp"
+    "Core/Rendering/Renderer.h"
+    "Core/Rendering/Renderer.cpp"
+    "Core/Rendering/VertexArray.h"
+    "Core/Rendering/VertexArray.cpp"
+    "Core/Rendering/VertexBuffer.h"
+    "Core/Rendering/VertexBuffer.cpp"
+    "Core/Rendering/UniformBuffer.h"
+    "Core/Rendering/RenderCommand.h"
+    "Core/Rendering/RenderCommand.cpp"
+
+    "Core/Resources/ShaderResource.h"
+    "Core/Resources/ShaderResource.cpp" 
+    "Core/Resources/AssetManager.h" 
+    "Core/Resources/AssetManager.cpp"
+
+    "Core/SceneMgr/SceneState.h"
+    "Core/SceneMgr/Scene.h"
+    "Core/SceneMgr/Scene.cpp"
+    "Core/Scripting/ScriptBase.h" 
+    "Core/Scripting/ScriptBase.cpp"
+    "Core/Scripting/ScriptMgr.h"
+    "Core/Scripting/ScriptMgr.cpp"
+    "Core/Scripting/Script.h"
+    "Core/Scripting/Script.cpp"
+
+    "Core/Text/TextField.h"
+    "Core/Text/TextField.cpp"
+    "Core/Text/Label.h"
+    "Core/Text/Label.cpp"
+
+    "Core/Viewing/Camera.h" 
+    "Core/Viewing/Camera.cpp"
+)
 
 # Executable-specific files
 set(EDITOR_SOURCES
     "SpringEditor.cpp"
-    "Core/Engine/BaseApplication.h"
-    "Core/Engine/BaseApplication.cpp"
-    "Editor/Layer.h"
-    "Editor/Layer.cpp"
+    "Editor/BaseApplication.h"
+    "Editor/BaseApplication.cpp"
     "Editor/UILayer.h"
     "Editor/UILayer.cpp"
     "Editor/Panel.h" 
     "Editor/Panel.cpp"
+    "Editor/Project/Project.h"
+    "Editor/Project/Project.cpp"
 )
 
 # Library-specific sources
@@ -161,8 +221,6 @@ set(LIB_SOURCES
     ${SHARED_SOURCES}
     "Core/Engine/Character.h"
     "Core/Engine/Character.cpp"
-    "Editor/Layer.h"
-    "Editor/Layer.cpp"
 )
 
 # Executable target
